# uploadthing-py

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yaml  release.yaml
examples/: fastapi.py  simple.py
tests/: utapi_test.py
uploadthing_py/: __init__.py  builder.py  request_handler.py  types.py  utapi.py  utils.py
utpy/: __init__.py  types.py  utapi.py  utils.py
