[tool.poetry]
name = "uploadthing.py"
version = "0.3.1"
description = "Python SDK for UploadThing"
authors = ["juliusmarminge <julius0216@outlook.com>"]
readme = "README.md"
packages = [{ include = "uploadthing_py" }]
license = "MIT"


[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.27.0"
pydantic = "^2.7.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.7"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
mypy = "^1.10.0"
ruff = "^0.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
asyncio_mode = "auto"
log_cli = true
